# CMakeList.txt : CMake project for 9_chapter_cpp_algorithm, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (9_chapter_cpp_algorithm "9_chapter_cpp_algorithm.cpp" "9_chapter_cpp_algorithm.h")

# TODO: Add tests and install targets if needed.
